# bazel-env-webpack-ts-reproduce

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json
